vendor/proc-macro-error-1.0.4/tests/ui/unrelated_panic.stderr
error: proc macro panicked
 --> $DIR/unrelated_panic.rs:4:1
  |
4 | unrelated_panic!();
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: unrelated panic test
