vendor/proc-macro-error-1.0.4/tests/ui/unrelated_panic.rs
extern crate test_crate;
use test_crate::*;

unrelated_panic!();

fn main() {}
